Add public quiz/question endpoints and update services/controller